--- a/Frontend/styles/sidebar.css
+++ b/Frontend/styles/sidebar.css
@@ -17,7 +17,7 @@
   z-index: 100;
 }
 
-.sidebar.active ~ .main-content {
+.sidebar:hover ~ .main-content {
   left: 250px;
   width: calc(100% - 250px);
 }
@@ -148,18 +148,19 @@
 
 @media (max-width: 768px) {
   .sidebar {
-    width: 60px;
+    width: 80px;
   }
 
-  .sidebar.active {
+  .sidebar:hover {
     width: 200px;
+
   }
 
-  .main-content {
+  /* .main-content {
     margin-left: 60px;
-  }
+  } */
 
-  .sidebar.active ~ .main-content {
-    margin-left: 200px;
+  .sidebar:hover ~ .main-content {
+    width: calc(100% - 250px);
   }
 }
